--- a/src/static/style.css
+++ b/src/static/style.css
@@ -17,7 +17,7 @@ a {
   text-decoration: none;
   color: #009900;
 }
-a:hover {
+a:hover, a:focus {
   color: #99ff99;
 }
 h1, h2 {
@@ -54,6 +54,10 @@ p.wrap {
   width: 45em;
 }
 
+.hidden-layout {
+  padding: 0 .5em;
+  border: 1px solid transparent;
+}
 .hidden {
   border: 1px dotted gray;
   overflow: hidden;
@@ -82,13 +86,29 @@ p.wrap {
   visibility: visible;
 }
 
-.supporter {
+.warning:not(.warning-active) {
+  transition: color 1s, opacity 1s;
+}
+.warning-active {
+  color: #ff0000;
+  opacity: 1;
+}
+
+.supporter-badge {
   color: #ffff66;
 }
-a.supporter:hover {
+a.supporter-badge:hover, a.supporter-badge:focus {
   text-decoration: none;
   color: #ffffcc;
   text-shadow: 0 0 5px #ffff66;
+}
+.sponsor-badge {
+  color: #79a2d8;
+}
+a.sponsor-badge:hover, a.sponsor-badge:focus {
+  text-decoration: none;
+  color: #ccdbed;
+  text-shadow: 0 0 5px #79a2d8;
 }
 
 #sidebar {
@@ -117,12 +137,13 @@ header h1 a, header h1 span {
   color: #00cc00;
   text-shadow: 0 0 2px #00cc00, 0 0 5px #00cc00;
 }
-header h1 a:hover {
+header h1 a:hover, header h1 a:focus {
   color: #99ff99;
   text-shadow: 0 0 2px #99ff99, 0 0 5px #99ff99;
 }
 header h1.title-event .title-event-wrap {
   opacity: .33;
+  white-space: pre;
 }
 header .user {
   display: inline-block;
@@ -142,7 +163,7 @@ header nav ul {
 }
 header nav li {
   display: inline-block;
-  padding: 0 .5em;
+  padding: 0 .6em;
 }
 header nav a {
   display: inline-block;
@@ -150,7 +171,7 @@ header nav a {
   outline: none;
 }
 
-input[type="text"] {
+input[type="text"], textarea {
   background: transparent;
   color: inherit;
   border: 1px solid #666666;
@@ -160,6 +181,61 @@ input[type="text"] {
   font-size: inherit;
   margin: 0;
 }
+textarea {
+  vertical-align: top;
+}
+
+label img {
+  vertical-align: bottom;
+  position: relative;
+  top: -3px;
+  margin-right: .3em;
+}
+input[type="radio"] { display: none; }
+input[type="radio"] ~ span {
+  cursor: pointer;
+  display: inline-block;
+}
+input[type="radio"] ~ span:before {
+  content: "( ) ";
+}
+input[type="radio"] ~ span:hover, input[type="radio"] ~ span:focus {
+  background-color: #19193b;
+}
+input[type="radio"]:checked ~ span {
+  color: #ffffff;
+}
+input[type="radio"]:checked ~ span:before {
+  content: "(O) ";
+}
+input[type="checkbox"] { display: none; }
+input[type="checkbox"] ~ span {
+  cursor: pointer;
+  display: inline-block;
+}
+input[type="checkbox"] ~ span:before {
+  content: "[ ] ";
+}
+input[type="checkbox"] ~ span:hover, input[type="checkbox"] ~ span:focus {
+  background-color: #19193b;
+}
+input[type="checkbox"]:checked ~ span {
+  color: #ffffff;
+}
+input[type="checkbox"]:checked ~ span:before {
+  content: "[X] ";
+}
+input[type="checkbox"]:disabled ~ span {
+  opacity: .3;
+  cursor: default;
+}
+input[type="checkbox"]:disabled ~ span:before {
+  content: "[-] ";
+}
+input[type="checkbox"]:disabled ~ span:hover {
+  background-color: transparent;
+}
+
 
 input[type="submit"] {
   background: transparent;
@@ -171,7 +247,7 @@ input[type="submit"] {
   color: #009900;
   cursor: pointer;
 }
-input[type="submit"]:hover {
+input[type="submit"]:hover, input[type="submit"]:focus {
   color: #99ff99;
 }
 *::-moz-focus-inner {
@@ -231,57 +307,11 @@ article li:before {
   text-shadow: 0 0 5px #ffff66;
 }
 
-form#settings label img {
-  vertical-align: bottom;
-  position: relative;
-  top: -3px;
-  margin-right: .3em;
-}
-form#settings input[type="radio"] { display: none; }
 form#settings input[type="radio"] ~ span {
-  cursor: pointer;
-  display: inline-block;
   min-width: 30em;
 }
-form#settings input[type="radio"] ~ span:before {
-  content: "( ) ";
-}
-form#settings input[type="radio"] ~ span:hover {
-  background-color: #19193b;
-}
-form#settings input[type="radio"]:checked ~ span {
-  color: #ffffff;
-}
-form#settings input[type="radio"]:checked ~ span:before {
-  content: "(O) ";
-}
-form#settings input[type="checkbox"] { display: none; }
 form#settings input[type="checkbox"] ~ span {
-  cursor: pointer;
-  display: inline-block;
   min-width: 30em;
-}
-form#settings input[type="checkbox"] ~ span:before {
-  content: "[ ] ";
-}
-form#settings input[type="checkbox"] ~ span:hover {
-  background-color: #19193b;
-}
-form#settings input[type="checkbox"]:checked ~ span {
-  color: #ffffff;
-}
-form#settings input[type="checkbox"]:checked ~ span:before {
-  content: "[X] ";
-}
-form#settings input[type="checkbox"]:disabled ~ span {
-  opacity: .3;
-  cursor: default;
-}
-form#settings input[type="checkbox"]:disabled ~ span:before {
-  content: "[-] ";
-}
-form#settings input[type="checkbox"]:disabled ~ span:hover {
-  background-color: transparent;
 }
 
 .share {
@@ -290,7 +320,7 @@ form#settings input[type="checkbox"]:disabled ~ span:hover {
   transition: color .2s 1s;
   /*position: relative;*/
 }
-.share:hover {
+.share:hover, .share:focus-within {
   color: #aaffaa;
   transition: color .2s 0s;
 }
@@ -309,7 +339,7 @@ form#settings input[type="checkbox"]:disabled ~ span:hover {
 .share .share-content:after {
   /*content: "]";*/
 }
-.share:hover .share-content {
+.share:hover .share-content, .share:focus-within .share-content {
   max-width: 45em;
   transition: max-width .2s 0s;
 }
@@ -338,13 +368,14 @@ form#settings input[type="checkbox"]:disabled ~ span:hover {
   outline: none;
   cursor: default;
 }
-.calendar a:hover {
+.calendar a:hover, .calendar a:focus {
   background-color: #1e1e46;
   background-color: rgba(119,119,165,.2);
   cursor: pointer;
 }
 #calendar-countdown {
   padding-left: .5em;
+  color: #cccccc;
 }
 .calendar .calendar-day { color: #666666; }
 .calendar a .calendar-day { color: #cccccc; }
@@ -375,11 +406,11 @@ form#settings input[type="checkbox"]:disabled ~ span:hover {
   min-width: 35em;
   display: inline-block;
 }
-.stats > a:hover {
+.stats > a:hover, .stats > a:focus {
   background-color: #1e1e46;
 }
 .stats-firstonly {
-  color: #666699;
+  color: #9999cc;
 }
 .stats-both {
   color: #ffff66;
@@ -393,7 +424,7 @@ form#settings input[type="checkbox"]:disabled ~ span:hover {
   text-shadow: 0 0 5px #ffffff;
 }
 .leaderboard-daydesc-first {
-  color: #666699;
+  color: #9999cc;
 }
 .leaderboard-daydesc-both {
   color: #ffff66;
@@ -434,14 +465,18 @@ form#settings input[type="checkbox"]:disabled ~ span:hover {
 .privboard-name {
   vertical-align: text-bottom;
 }
-.privboard-day-locked     { color: #333333; }
+.privboard-days > span    { display: inline-block; color: #333333; }
+.privboard-days > a       { display: inline-block; }
 .privboard-star-locked    { visibility: hidden; }
 .privboard-star-unlocked  { color: #333333; }
-.privboard-star-firstonly { color: #666699; }
+.privboard-star-firstonly { color: #9999cc; }
 .privboard-star-both      { color: #ffff66; }
 .privboard-delbtn { opacity:.33; }
 .privboard-row:hover .privboard-delbtn { opacity:1; }
 
 .sponsors {
   width: 46em; /*76 characters*/
+}
+.sponsor {
+  margin: 1em 0;
 }
