--- a/src/template/leaderboard.template.html
+++ b/src/template/leaderboard.template.html
@@ -35,7 +35,7 @@
       <button onclick="drawChart('five')">Show Top Five</button>
       <canvas id="canvas"></canvas>
       <script type="module">
-        import { Chart, registerables } from 'https://cdn.skypack.dev/chart.js@4.1.2?min';
+        import { Chart, registerables } from '{{chartJsUrl}}';
         Chart.register(...registerables);
         var config = JSON.parse('{{config}}');
         window.drawChart = function (group) {
