--- a/static/highcontrast.css
+++ b/static/highcontrast.css
@@ -1,4 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;900');
+@font-face {
+  font-family: 'Source Code Pro';
+  font-style: normal;
+  font-weight: 400;
+  src: url(SourceCodePro-400.woff) format('woff');
+}
+@font-face {
+  font-family: 'Source Code Pro';
+  font-style: normal;
+  font-weight: 900;
+  src: url(SourceCodePro-900.woff) format('woff');
+}
 
 * {
   background: transparent !important;
